fix: changed token storage from local storage to httpOnly cookie